added cancel to new review plus a bit more style

--- a/css/_dashboard.scss
+++ b/css/_dashboard.scss
@@ -2,13 +2,14 @@
   text-align: center;
   padding: 15% 0;
   background-image: url("http://dl9fvu4r30qs1.cloudfront.net/12/763da01d3411e2938622000a1d0930/file/5-things-about-reservoir-dogs-facts-trivia-20th-anniversary.jpg");
-  background-color: #0085D2;
+  background-color: #A2B6C1;
   background-blend-mode: lighten;
-  color: black;
+  color: #383838;
   background-size:cover;
   background-repeat:no-repeat;
   font-size:36px;
 }
+
 #movies{
   background:white;
 }
@@ -39,7 +40,7 @@ article {
   width:50%;
   display:inline-block;
   vertical-align:top;
-  margin-left:10px;
+  margin-left:30px;
   h3{
     font-size:24px;
   }
