initial branch commit

--- a/css/_dashboard.scss
+++ b/css/_dashboard.scss
@@ -2,9 +2,9 @@
   text-align: center;
   padding: 15% 0;
   background-image: url("http://dl9fvu4r30qs1.cloudfront.net/12/763da01d3411e2938622000a1d0930/file/5-things-about-reservoir-dogs-facts-trivia-20th-anniversary.jpg");
-  background-color: #A2B6C1;
-  background-blend-mode: lighten;
-  color: #383838;
+  background-color: #2F2F2F;
+  background-blend-mode: multiply;
+  color: #fff;
   background-size:cover;
   background-repeat:no-repeat;
   font-size:36px;
